--- a/Artículos, tendencias y más.html
+++ b/Artículos, tendencias y más.html
@@ -41,7 +41,7 @@
 
     <section id="Artículos, tendecias y más">
         <h2>Artículos, tendencias y más</h2>
-        <p><b><u>Cristal Clear</u></b>, Jabón cristalino</p>
+        <p><b><u>Cristal Clear, Jabón cristalino</u></b></p>
         <h2><a href="Artículos.html">Ver más</a></h2>
         <!-- Agrega más contenido aquí -->
         <h2><a href="index.html">Atrás</a></h2>
