--- a/Artículos.html
+++ b/Artículos.html
@@ -41,7 +41,7 @@
     <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
         <p>Cristal Clear, Jabón cristalino</p>
-        <img src="https://imgur.com/a/yFMcrIs" alt="Descripción de la imagen">
+        <img src="https://i.imgur.com/TlcBqoF.png" alt="Descripción de la imagen">
         <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
