--- a/Artículos.html
+++ b/Artículos.html
@@ -41,7 +41,7 @@
     <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
         <p>Cristal Clear, Jabón cristalino</p>
-        <img src="https://i.imgur.com/TlcBqoF.png" alt=" Artículo 1" style="max-height: 1000px; width: 1000px; height: 1000px;>
+        <img src="https://i.imgur.com/TlcBqoF.png" alt=" Artículo 1" style="max-height: 500px">
         <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
